@@ -26,39 +26,36 @@ NULL
                          
 ##' Base class for all Ext objects
 ##'
+##' The \code{GComponent} class provides the base class for all widgets.
+##' 
 ##' The basic setup of gWidgetsWWW2 involves a set of constructors and
 ##' S3 methods for manipulating the constructed objects. The
 ##' constructors return a reference class object. The S3 methods then
 ##' simply pass arguments along to the appropriate reference class
 ##' method. Of course, these may be called directly, but for
-##' portability of gWidgets code to other toolkit this is not
+##' portability of gWidgets code to other toolkits this is not
 ##' recommended. However, for methods that are only implemented in a
 ##' given toolkit, such reference method calls becomes necessary and
 ##' desirable. In documenting the reference class objects just those
 ##' exposed methods which must be called as reference methods are
 ##' mentioned.
 ##'
-##' The basic interface is meant to be implemented by all gWidgets
-##' implementations. The forthcoming gWidgets2 will expect that. So
-##' gWidgets2WWW will use the basic interface, but for now
-##' gWidgetsWWW2 does only for the most part.
-##'
-##' The GComponent class is used to define methods common to most all
-##' the widgets. This class also includes methods for processing
+##' The GComponent class is used to define methods common to  all the
+##' widgets. This class also includes methods for processing
 ##' callbacks. This is different in gWidgetsWWW2. The basic idea is
 ##' that JavaScript is used to make a callback into the session
-##' containing a session id (to find the correct evaluation
-##' environment), a object id (to find the signaling object), a signal
-##' (to look up the handlers assigned to that object for the given
-##' signal) and possibly some extra parameters. The latter are there
-##' to bypass the transport calls that are used to synchronize the
-##' widget state from the browser with the R session data. These calls
-##' are asynchronous so may not have been processed when the handler
-##' call is processed.
+##' containing (using the  session id to find the correct evaluation
+##' environment). Passed along are an object id (to find the signaling
+##' object), a signal (to look up the handlers assigned to that object
+##' for the given signal) and possibly some extra parameters. The
+##' latter are there to bypass the transport calls that are used to
+##' synchronize the widget state from the browser with the R session
+##' data. These transport calls are asynchronous so may not have been
+##' processed when the handler call is processed.
 ##'
 ##' The lookup used above requires each widget to be registered in a
 ##' toplevel object which is unique to a page. This toplevel object is
-##' found from the session id, then looks up the object from the
+##' found from the session id, which then looks up the object from the
 ##' passed in object id. This toplevel object is passed into a widget
 ##' via either the \code{container} argument or the \code{parent}
 ##' argument. In addition to routing requests to handlers, the
@@ -69,9 +66,9 @@ NULL
 ##' arguments that are converted to a JavaScript object to
 ##' parameterize the method call. Somewhat reverse to this is calling
 ##' an R object from JavaScript. The method \code{call_rpc} is used
-##' for this, where in the JavaScript one uses \code{jRpc} to initiate
-##' the call and \code{add_public_method} to register that an object's
-##' method is available to be called in this manner.
+##' for this, where in the JavaScript code one uses \code{jRpc} to
+##' initiate the call and \code{add_public_method} to register that an
+##' object's method is available to be called in this manner.
 ##' 
 ##' Methods related to the handler code are \code{add_handler},
 ##' \code{invoke_handler}, \code{handler_widget},
@@ -79,6 +76,13 @@ NULL
 ##' \code{process_transport}, \code{param_defn},
 ##' \code{before_handler}
 ##'
+##'
+##' The basic reference class interface is meant to be implemented by
+##' all gWidgets implementations. The forthcoming gWidgets2 will
+##' expect that. So gWidgets2WWW -- if that ever happens -- will use
+##' the basic interface, but for now gWidgetsWWW2 does only for the
+##' most part.
+##' 
 ##'  @rdname gWidgetsWWW2-package
 GComponent <- setRefClass("GComponent",
                          contains="BasicToolkitInterface",
