@@ -21,12 +21,16 @@ NULL
 ##' @param tab.pos where to place tabs. A value of 1 is the bottom, else the top.
 ##' @param close.buttons Logical. Are there close buttons on the tabs
 ##' @inheritParams gwidget
-##' @return a GNotebook reference class object. 
+##' @return a \code{GNotebook} reference class object.
+##' @seealso The \code{\link{gstackwidget}} container is similar, but
+##' has no tabs.
 ##' @export
 ##' @examples
 ##' w <- gwindow()
 ##' nb <- gnotebook(cont=w)
 ##' gbutton("hello", container=nb, label="My label") ## pass in label argument through ... to \code{add}
+##' gbutton("page 2", container=nb, label="page 2")
+##' svalue(nb) <- 1
 gnotebook <- function(tab.pos = 3, close.buttons = FALSE, container, ...,
                       width=NULL, height=NULL, ext.args=NULL
                       ) {
